<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_card_margin"
        app:cardCornerRadius="@dimen/item_card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_padding"
            android:paddingBottom="@dimen/item_padding">

        <TextView
                android:id="@+id/comic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting_comic_title_placeholder"
                android:textStyle="bold"
                android:textSize="@dimen/title_page_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

        <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/comic_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                android:layout_marginTop="@dimen/item_title_comic_page_margin"
                android:adjustViewBounds="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
                android:id="@+id/comic_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/comic_page"
                app:layout_constraintStart_toStartOf="@id/comic_page"
                app:layout_constraintRight_toRightOf="@id/comic_page"
                app:layout_constraintEnd_toEndOf="@id/comic_page"
                app:layout_constraintBottom_toBottomOf="@id/comic_page"
                app:layout_constraintTop_toTopOf="@id/comic_page"
                android:visibility="invisible"
                android:alpha="0"
                android:padding="@dimen/comic_alt_padding"/>

        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/comic_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminate="true"
                style="@android:style/Widget.Holo.ProgressBar.Large"/>

        <TextView
                android:id="@+id/comic_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_refresh_guide"
                android:contentDescription="@string/manual_refresh_guide"
                android:drawableTop="@drawable/ic_baseline_refresh_24px"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comic_title"
                app:layout_constraintBottom_toBottomOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
