<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/comic_strip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    <TextView
            android:id="@+id/comic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Getting latest strip!"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/comic_strip"
            app:layout_constraintVertical_chainStyle="packed" />

    <TextView
            android:id="@+id/comic_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/comic_strip"
            app:layout_constraintRight_toRightOf="@id/comic_strip"
            app:layout_constraintBottom_toBottomOf="@id/comic_strip"
            app:layout_constraintTop_toTopOf="@id/comic_strip"
            android:visibility="invisible"
        android:alpha="0"
    />

</androidx.constraintlayout.widget.ConstraintLayout>